2005-09-07  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual.xml:
	  integrated most of the notes from the text files under doc/*.txt

2005-08-24  Stefan Kost  <ensonic@users.sf.net>

	* gtk-doc-manual.xml:
          more notes in the faq
          setup chapter is nearly complete
          more notes about doc comment format

2005-08-15  Stefan Kost  <ensonic@users.sf.net>

	* .cvsignore:
	* ChangeLog:
	* Makefile:
	* Makefile.am:
	* fdl-appendix.xml:
	* gtk-doc-manual-C.omf.in:
	* gtk-doc-manual.xml:
          reanimated gtkdoc manual
          added new chapters

2004-05-07	Geert Stappers <stappers@stappers.nl>

	* README: new file.
	* gtk-doc-manual.sgml: Deleted.
	* fdl-appendix.sgml: Deleted.

2004-05-06	Geert Stappers <stappers@stappers.nl>

	* gtk-doc-manual.xml: repaired the crossreference to FDL

	* Makefile: new file, to "document" the build process.

2004-05-06	Keith Sharp <kms@passback.co.uk>

	* gtk-doc-manual.xml: New file, XML version of
	  gtk-doc-manual.sgml
	* fdl-appendix.xml: New file, XML version of
	  fdl-appendix.sgml

2000-11-26	Dan Mueth <d-mueth@uchicago.edu>

	* gtk-doc-manual.sgml: Committing changes made by
	Chris Lyttle <chris@wilddev.net>.  (Text for Chapter 1)

2000-11-25	Dan Mueth <d-mueth@uchicago.edu>

	* gtk-doc-manual.sgml: Put part of the outline into SGML.
	  Chris plans to put rest of outline in here and start
	  writing.
	* fdl-appendix.sgml: The FDL in SGML.  We will probably post
	  these on the web as a single document (book) so we will
	  need the FDL to be included as an appendix.
