@@ -18,7 +18,7 @@ http://scrollkeeper.sourceforge.net/documentation/writing_scrollkeeper_omf_files
     <version identifier="@VERSION@" date="2005-08-01" description="GTK-Doc Manual"/>
     <subject category="GNOME|Development"/>
     <description>
-      User manual for developers with instruction for GTK-Doc usage.
+      User manual for developers with instructions of GTK-Doc usage.
     </description>
     <type>
       user's guide
