@@ -1,3 +1,10 @@
+2005-12-09  Stefan Kost  <ensonic@users.sf.net>
+
+	* gtk-doc-manual-C.omf.in:
+	* gtk-doc-manual.xml:
+	  added more details about doc-comments
+	  added section about revision control systems
+
 2005-09-07  Stefan Kost  <ensonic@users.sf.net>
 
 	* gtk-doc-manual.xml:
